update logos show url bar message

--- a/cliqz@cliqz.com/chrome/locale/de-DE/cliqz.json
+++ b/cliqz@cliqz.com/chrome/locale/de-DE/cliqz.json
@@ -1,5 +1,11 @@
 {
 	"updateMessage":{
 		"message":"Eine neue - noch bessere - Version der cliqz-Navigation ist verfügbar.\nOk drücken zum Aktualisieren."
+	},
+	"urlbarSearch":{
+		"message":"Search"
+	},
+	"urlbarNavigate":{
+		"message":"Navigate"
 	}
 }
