result type added

--- a/cliqz@cliqz.com/chrome/locale/de-DE/cliqz.json
+++ b/cliqz@cliqz.com/chrome/locale/de-DE/cliqz.json
@@ -3,9 +3,9 @@
 		"message":"Eine neue - noch bessere - Version der cliqz-Navigation ist verfügbar.\nOk drücken zum Aktualisieren."
 	},
 	"urlbarSearch":{
-		"message":"Search"
+		"message":"Suchen"
 	},
 	"urlbarNavigate":{
-		"message":"Navigate"
+		"message":"Navigieren"
 	}
 }
