fix suggestions improve selected state UI

--- a/cliqz@cliqz.com/chrome/locale/de-DE/cliqz.json
+++ b/cliqz@cliqz.com/chrome/locale/de-DE/cliqz.json
@@ -10,5 +10,8 @@
 	},
 	"searchFor":{
 		"message":"Suchergebnisse für "
+	},
+	"searchForDescription":{
+		"message":"mit der Suchmaschine deiner Wahl"
 	}
 }
