manual update reduplicate suggestions in different cappitalisation

--- a/cliqz@cliqz.com/chrome/locale/de-DE/cliqz.json
+++ b/cliqz@cliqz.com/chrome/locale/de-DE/cliqz.json
@@ -2,6 +2,9 @@
 	"updateMessage":{
 		"message":"Eine neue - noch bessere - Version der cliqz-Navigation ist verfügbar.\nOk drücken zum Aktualisieren."
 	},
+	"noUpdateMessage":{
+		"message":"Kein Update verfügbar"
+	},
 	"urlbarSearch":{
 		"message":"Suchen"
 	},
