--- a/cliqz@cliqz.com/chrome/locale/de-DE/cliqz.json
+++ b/cliqz@cliqz.com/chrome/locale/de-DE/cliqz.json
@@ -14,7 +14,10 @@
 	"searchFor":{
 		"message":"Suchergebnisse für "
 	},
-	"searchForDescription":{
-		"message":"mit der Suchmaschine deiner Wahl"
+	"ok":{
+		"message":"OK"
+	},
+	"loadDefaults":{
+		"message":"Load Defaults"
 	}
 }
