--- a/cliqz@cliqz.com/chrome/locale/de-DE/cliqz.json
+++ b/cliqz@cliqz.com/chrome/locale/de-DE/cliqz.json
@@ -14,6 +14,9 @@
 	"searchFor":{
 		"message":"Suchergebnisse für "
 	},
+	"searchForDescription":{
+		"message":"mit der Suchmaschine deiner Wahl"
+	},
 	"ok":{
 		"message":"OK"
 	},
