Reduce size of search engine suggestion results

--- a/cliqz@cliqz.com/chrome/locale/de-DE/cliqz.json
+++ b/cliqz@cliqz.com/chrome/locale/de-DE/cliqz.json
@@ -11,10 +11,10 @@
 	"urlbarNavigate":{
 		"message":"Los"
 	},
-	"searchFor":{
+	"searchForBegin":{
 		"message":"Suchergebnisse für "
 	},
-	"searchForDescription":{
-		"message":"mit der Suchmaschine deiner Wahl"
+	"searchForEnd":{
+		"message":" mit der Suchmaschine deiner Wahl"
 	}
 }
