Add last search button

--- a/cliqz@cliqz.com/chrome/locale/de-DE/cliqz.json
+++ b/cliqz@cliqz.com/chrome/locale/de-DE/cliqz.json
@@ -5,11 +5,8 @@
 	"noUpdateMessage":{
 		"message":"Kein Update verfügbar"
 	},
-	"urlbarSearch":{
-		"message":"Suchen"
-	},
-	"urlbarNavigate":{
-		"message":"Los"
+	"urlBarLastSearch":{
+		"message":"Letzte Suche"
 	},
 	"searchForBegin":{
 		"message":"Suchergebnisse für "
