https://github.com/cliqz/bug-tracker/issues/131

--- a/cliqz@cliqz.com/chrome/locale/de-DE/cliqz.json
+++ b/cliqz@cliqz.com/chrome/locale/de-DE/cliqz.json
@@ -9,10 +9,10 @@
 		"message":"↵ Letzte Eingabe"
 	},
 	"searchForBegin":{
-		"message":"Suchergebnisse für "
+		"message":"Suche "
 	},
 	"searchForEnd":{
-		"message":" mit der Suchmaschine deiner Wahl"
+		"message":" auf "
 	},
 	"ok":{
 		"message":"OK"
