--- a/cliqz@cliqz.com/chrome/locale/de-DE/cliqz.json
+++ b/cliqz@cliqz.com/chrome/locale/de-DE/cliqz.json
@@ -6,7 +6,7 @@
 		"message":"Kein Update verfügbar"
 	},
 	"urlBarLastSearch":{
-		"message":"↵ Letzte Eingabe"
+		"message":"↵  "
 	},
 	"searchForBegin":{
 		"message":"Suche "
