los/suchen back!

--- a/cliqz@cliqz.com/chrome/locale/de-DE/cliqz.json
+++ b/cliqz@cliqz.com/chrome/locale/de-DE/cliqz.json
@@ -22,5 +22,11 @@
 	},
 	"arrow": {
 		"message":"▶ "
+	},
+	"urlbarNavigate": {
+		"message": "mit cliqz direkt zum Ziel"
+	},
+	"urlbarSearch": {
+		"message": "mit Enter zu Google"
 	}
 }
