Got rid of the need to put quotation mark around text titles.

--- a/cliqz@cliqz.com/chrome/locale/de-DE/cliqz.json
+++ b/cliqz@cliqz.com/chrome/locale/de-DE/cliqz.json
@@ -88,5 +88,8 @@
     },
     "Sitemap_Bild_Topics": {
 		"message":"Themen"
+    },
+    "Sitemap_Bild_Bundesliga": {
+		"message":"Bundesliga"
     }
 }
