Internationalization of the summary.

--- a/cliqz@cliqz.com/chrome/locale/de-DE/cliqz.json
+++ b/cliqz@cliqz.com/chrome/locale/de-DE/cliqz.json
@@ -2,6 +2,9 @@
     "urlBarLastSearch":{
         "message":"↵  "
     },
+    "Sitemap_Summary": {
+        "message":"Meine {} Seiten"
+    },
     "Sitemap_Youtube_Popular": {
         "message":"Beliebte auf YouTube"
     },
