--- a/cliqz@cliqz.com/chrome/locale/en-US/cliqz.json
+++ b/cliqz@cliqz.com/chrome/locale/en-US/cliqz.json
@@ -2,6 +2,9 @@
     "urlBarLastSearch":{
         "message":"↵  "
     },
+    "Sitemap_Summary": {
+        "message":"My sitemap for {}"
+    },
     "Sitemap_Youtube_Popular": {
         "message":"Popular on YouTube"
     },
