--- a/cliqz@cliqz.com/chrome/locale/hu-HU/cliqz.json
+++ b/cliqz@cliqz.com/chrome/locale/hu-HU/cliqz.json
@@ -2,6 +2,9 @@
     "urlBarLastSearch":{
         "message":"↵  "
     },
+    "Sitemap_Summary": {
+        "message":"Korábban megtekintett oldalak itt: {}"
+    },
     "Sitemap_Youtube_Popular": {
         "message":"Népszerű a Youtebe-on"
     },
