Added Youtube playlists.

--- a/cliqz@cliqz.com/chrome/locale/en/cliqz.json
+++ b/cliqz@cliqz.com/chrome/locale/en/cliqz.json
@@ -20,6 +20,9 @@
     "Sitemap_Youtube_Channels": {
         "message":"Channels"
     },
+    "Sitemap_Youtube_Playlists": {
+        "message":"Playlists"
+    },
     "Sitemap_Facebook_Newsfeed": {
         "message":"News Feed"
     },
