--- a/cliqz@cliqz.com/chrome/locale/hu/cliqz.json
+++ b/cliqz@cliqz.com/chrome/locale/hu/cliqz.json
@@ -20,6 +20,9 @@
     "Sitemap_Youtube_Channels": {
         "message":"Csatornák"
     },
+    "Sitemap_Youtube_Playlists": {
+        "message":"Lejátszási listák"
+    },
     "Sitemap_Facebook_Newsfeed": {
         "message":"Hírek"
     },
