--- a/cliqz@cliqz.com/chrome/locale/it/cliqz.json
+++ b/cliqz@cliqz.com/chrome/locale/it/cliqz.json
@@ -20,6 +20,9 @@
     "Sitemap_Youtube_Channels": {
         "message":"Canali"
     },
+    "Sitemap_Youtube_Playlists": {
+        "message":"Playlist"
+    },
     "Sitemap_Facebook_Newsfeed": {
         "message":"Notizie"
     },
