--- a/cliqz@cliqz.com/chrome/locale/de/cliqz.json
+++ b/cliqz@cliqz.com/chrome/locale/de/cliqz.json
@@ -2,6 +2,18 @@
     "urlBarLastSearch":{
         "message":"↵  "
     },
+    "noResultTitle":{
+        "message":"Schade, wir haben leider noch keinen passenden Vorschlag.<br />Wir arbeiten daran!"
+    },
+    "noResultMessage":{
+        "message":"Klicke rechts auf <b><i>noch mehr</i></b> für Ergebnisse einer anderen Suchmachine Deiner Wahl"
+    },
+    "noResults": {
+        "message":"Keine Ergebnisse"
+    },
+    "numResults": {
+        "message":"Top {} Ergebnisse"
+    },
     "Sitemap_Summary": {
         "message":"Meine {} Seiten"
     },
