--- a/cliqz@cliqz.com/chrome/locale/de/cliqz.json
+++ b/cliqz@cliqz.com/chrome/locale/de/cliqz.json
@@ -1,4 +1,10 @@
 {
+    "btnPrivacy":{
+        "message": "Datenschutz"
+    },
+    "btnDefaultSearchEngine":{
+        "message": "Standard-Suchmaschine"
+    },
     "urlBarLastSearch":{
         "message":"↵  "
     },
@@ -13,6 +19,57 @@
     },
     "numResults": {
         "message":"Top {} Ergebnisse"
+    },
+    "moreResults":{
+        "message":"noch mehr ..."
+    },
+    "customSearch":{
+        "message":"Suche <b><i>{}</i></b> auf {}"
+    },
+    "peoplePositionAt":{
+        "message":"bei"
+    },
+    "peoplePositionSince":{
+        "message":"seit"
+    },
+    "videoBy":{
+        "message":"von"
+    },
+    "weatherCurrent":{
+        "message":"aktuell"
+    },
+    "weatherCredits":{
+        "message":"zur Verfügung gestellt von <br /> openweathermap.org"
+    },
+    "ago1Minute":{
+        "message":"vor einer Minute"
+    },
+    "agoXMinutes":{
+        "message":"vor {} Minuten"
+    },
+    "ago1Hour":{
+        "message":"vor einer Stunde"
+    },
+    "agoXHours":{
+        "message":"vor {} Stunden"
+    },
+    "agoYesterday":{
+        "message":"gestern"
+    },
+    "agoXDays":{
+        "message":"vor {} Tagen"
+    },
+    "ago1Month":{
+        "message":"vor einem Monat"
+    },
+    "agoXMonths":{
+        "message":"vor {} Monaten"
+    },
+    "ago1year":{
+        "message":"vor einem Jahr"
+    },
+    "agoXYears":{
+        "message":"vor {} Jaren"
     },
     "Sitemap_Summary": {
         "message":"Meine {} Seiten"
