Add Automatic item to region selection menu

--- a/cliqz@cliqz.com/chrome/locale/de/cliqz.json
+++ b/cliqz@cliqz.com/chrome/locale/de/cliqz.json
@@ -98,6 +98,9 @@
     "Sitemap_Bild_Bundesliga": {
         "message":"Bundesliga"
     },
+    "country_code_": {
+      "message":"Automatisch"
+    },
     "country_code_AT": {
       "message":"Österreich - Austria"
     },
