update no results

--- a/cliqz@cliqz.com/chrome/locale/de/cliqz.json
+++ b/cliqz@cliqz.com/chrome/locale/de/cliqz.json
@@ -9,7 +9,7 @@
         "message":"↵  "
     },
     "noResultTitle":{
-        "message":"Schade, wir haben leider noch keinen passenden Vorschlag.<br />Wir arbeiten daran!"
+        "message":"Schade, wir haben leider noch keine passenden Vorschläge.<br /> Wir arbeiten daran!"
     },
     "noResultMessage":{
         "message":"Klicke rechts auf <b><i>noch mehr</i></b> für Ergebnisse einer anderen Suchmachine Deiner Wahl"
