--- a/cliqz@cliqz.com/chrome/locale/fr/cliqz.json
+++ b/cliqz@cliqz.com/chrome/locale/fr/cliqz.json
@@ -1,117 +1,117 @@
 {
     "btnPrivacy":{
-        "message": "Privacy Policy"
+        "message": "Politique de confidentialité"
     },
     "btnDefaultSearchEngine":{
-        "message": "Default Search Engine"
+        "message": "Moteur de recherche par défaut"
     },
     "urlBarLastSearch":{
         "message":"↵  "
     },
     "noResultTitle":{
-        "message":"Sorry, we don’t have any results yet.<br />We’re working on it."
+        "message":"Oops, Nous n'avons pas encore le bon résultat.<br /> Nous faisons notre mieux pour résoudre le problème!"
     },
     "noResultMessage":{
-        "message":"Hover over <b><i>more</i></b> at the bottom right and select another search engine."
+        "message":"Survolez <b><i>plus</i></b> en bas à droite et sélectionnez un autre moteur de recherche."
     },
     "noResults": {
-        "message":"No results"
+        "message":"Aucun Résultat"
     },
     "numResults": {
-        "message":"Top {} Results"
+        "message":"{} Meilleurs Résultats"
     },
     "moreResults":{
-        "message":"more ..."
+        "message":"plus ..."
     },
     "customSearch":{
-        "message":"Search <b><i>{}</i></b> on {}"
+        "message":"Recherche <b><i>{}</i></b> sur {}"
     },
     "peoplePositionAt":{
-        "message":"at"
+        "message":"à"
     },
     "peoplePositionSince":{
-        "message":"since"
+        "message":"depuis"
     },
     "videoBy":{
-        "message":"by"
+        "message":"par"
     },
     "weatherCurrent":{
-        "message":"current"
+        "message":"actuellement"
     },
     "weatherCredits":{
-        "message":"provided courtesy of <br /> openweathermap.org"
+        "message":"Avec l'aimable autorisation de <br /> openweathermap.org"
     },
     "ago1Minute":{
-        "message":"one minute ago"
+        "message":"depuis une minute"
     },
     "agoXMinutes":{
-        "message":"{} minutes ago"
+        "message":"depuis{} minutes"
     },
     "ago1Hour":{
-        "message":"one hour ago"
+        "message":"depuis une heure"
     },
     "agoXHours":{
-        "message":"{} hours ago"
+        "message":"depuis {} heures"
     },
     "agoYesterday":{
-        "message":"yesterday"
+        "message":"hier"
     },
     "agoXDays":{
-        "message":"{} days ago"
+        "message":"depuis {} jours"
     },
     "ago1Month":{
-        "message":"one month ago"
+        "message":"depuis un mois"
     },
     "agoXMonths":{
-        "message":"{} months ago"
+        "message":"depuis {} mois"
     },
     "ago1year":{
-        "message":"one year ago"
+        "message":"depuis un an"
     },
     "agoXYears":{
-        "message":"{} years ago"
+        "message":"depuis {} ans"
     },
     "offTitle":{
-        "message":"the new way to navigate the web"
+        "message":"le nouveau moyen pour surfer sereinement."
     },
     "offBtn":{
-        "message":"Try out now!"
+        "message":"Essayer cliqz!"
     },
     "offMessage":{
-        "message":"Insert your search query in the address bar – receive results instantly"
+        "message":"Insérez votre requête de recherche dans la barre d'adresse -  recevez les résultats instantanément."
     },
     "Sitemap_Summary": {
-        "message":"My sitemap for {}"
+        "message":"Mon plan du site pour {}"
     },
     "Sitemap_Youtube_Popular": {
-        "message":"Popular on YouTube"
+        "message":"Populaire sur YouTube"
     },
     "Sitemap_Youtube_Subscriptions": {
-        "message":"My Subscriptions"
+        "message":"Mes abonnements"
     },
     "Sitemap_Youtube_History": {
-        "message":"History"
+        "message":"Historique"
     },
     "Sitemap_Youtube_WatchLater": {
-        "message":"Watch Later"
+        "message":"A regarder ultérieurement"
     },
     "Sitemap_Youtube_Channels": {
-        "message":"Channels"
+        "message":"Chaînes"
     },
     "Sitemap_Youtube_Playlists": {
         "message":"Playlists"
     },
     "Sitemap_Facebook_Newsfeed": {
-        "message":"News Feed"
+        "message":"Fil d'actualités"
     },
     "Sitemap_Facebook_Messages": {
         "message":"Messages"
     },
     "Sitemap_Facebook_Events": {
-        "message":"Events"
+        "message":"Évenements"
     },
     "Sitemap_Facebook_Help": {
-        "message":"Help"
+        "message":"Aide"
     },
     "Sitemap_Facebook_Pages": {
         "message":"Pages"
@@ -120,40 +120,40 @@
         "message":"Groups"
     },
     "Sitemap_Facebook_Lists": {
-        "message":"Lists"
+        "message":"Listes"
     },
     "Sitemap_Amazon_MyAmazon": {
-        "message":"Your Amazon"
+        "message":"Votre espace Amazon"
     },
     "Sitemap_Amazon_MyAccount": {
-        "message":"Your Account"
+        "message":"Votre compte"
     },
     "Sitemap_Amazon_Wishlist": {
-        "message":"Wish List"
+        "message":"Liste d'envies"
     },
     "Sitemap_Amazon_Categories": {
-        "message":"Categories"
+        "message":"Catégories"
     },
     "Sitemap_Amazon_Shops": {
-        "message":"Shops"
+        "message":"Les boutiques"
     },
     "Sitemap_Ebay_MyEbay": {
-        "message":"My eBay"
+        "message":"Mon eBay"
     },
     "Sitemap_Ebay_Deals": {
-        "message":"Daily Deals"
+        "message":"Deals journaliers"
     },
     "Sitemap_Ebay_Shops": {
-        "message":"Shops"
+        "message":"Boutiques"
     },
     "Sitemap_Chefkoch_Magazin": {
         "message":"Magazine"
     },
     "Sitemap_Chefkoch_Rezepte": {
-        "message":"Recipes"
+        "message":"Recettes"
     },
     "Sitemap_Chefkoch_Community": {
-        "message":"Community"
+        "message":"Communauté"
     },
     "Sitemap_Chefkoch_Blog": {
         "message":"Blog"
@@ -162,16 +162,16 @@
         "message":"Articles"
     },
     "Sitemap_Bild_Shop": {
-        "message":"Bild Shop"
+        "message":"Boutique de Bild"
     },
     "Sitemap_Bild_Community": {
-        "message":"Community"
+        "message":"Communauté"
     },
     "Sitemap_Bild_Login": {
         "message":"Login"
     },
     "Sitemap_Bild_Topics": {
-        "message":"Topics"
+        "message":"Sujets"
     },
     "Sitemap_Bild_Bundesliga": {
         "message":"Bundesliga"
