--- a/cliqz@cliqz.com/chrome/locale/de/cliqz.json
+++ b/cliqz@cliqz.com/chrome/locale/de/cliqz.json
@@ -21,7 +21,7 @@
         "message":"Top {} Ergebnisse"
     },
     "moreResults":{
-        "message":"noch mehr ..."
+        "message":"mehr ..."
     },
     "customSearch":{
         "message":"Suche <b><i>{}</i></b> auf {}"
