--- a/cliqz@cliqz.com/chrome/locale/fr/cliqz.json
+++ b/cliqz@cliqz.com/chrome/locale/fr/cliqz.json
@@ -9,7 +9,7 @@
         "message":"↵  "
     },
     "noResultTitle":{
-        "message":"Oops, Nous n'avons pas encore le bon résultat.<br /> Nous faisons notre mieux pour résoudre le problème!"
+        "message":"Oops, Nous n'avons pas encore le bon résultat.<br /> Nous faisons de notre mieux pour résoudre le problème!"
     },
     "noResultMessage":{
         "message":"Survolez <b><i>plus</i></b> en bas à droite et sélectionnez un autre moteur de recherche."
