locale files updated

--- a/cliqz@cliqz.com/chrome/locale/de/cliqz.json
+++ b/cliqz@cliqz.com/chrome/locale/de/cliqz.json
@@ -5,6 +5,9 @@
     "btnDefaultSearchEngine":{
         "message": "Standard-Suchmaschine"
     },
+    "btnRegion":{
+        "message": "Regionale Ergebnisse"
+    },
     "urlBarLastSearch":{
         "message":"↵  "
     },
