Change Automatisch to Automatic

--- a/cliqz@cliqz.com/chrome/locale/de/cliqz.json
+++ b/cliqz@cliqz.com/chrome/locale/de/cliqz.json
@@ -177,7 +177,7 @@
         "message":"Bundesliga"
     },
     "country_code_": {
-      "message":"Automatisch"
+      "message":"Automatic"
     },
     "country_code_AT": {
       "message":"Österreich - Austria"
