--- a/cliqz@cliqz.com/chrome/locale/en/cliqz.json
+++ b/cliqz@cliqz.com/chrome/locale/en/cliqz.json
@@ -1,4 +1,10 @@
 {
+    "whatIsCliqz":{
+        "message": "What is cliqz?"
+    },
+    "whatIsCliqzTry":{
+        "message": "What is cliqz? <-- try it yourself, eg: 'Mario Gotze'"
+    },
     "btnPrivacy":{
         "message": "Privacy Policy"
     },
