--- a/cliqz@cliqz.com/chrome/locale/fr/cliqz.json
+++ b/cliqz@cliqz.com/chrome/locale/fr/cliqz.json
@@ -5,6 +5,9 @@
     "whatIsCliqzTry":{
         "message": "Cliqz, c'est quoi? <-- essayer, exemple: 'Mario Gotze'"
     },
+    "settings":{
+        "message": "Paramètres"
+    },
     "btnPrivacy":{
         "message": "Politique de confidentialité"
     },
