Remove the "." after the date in Weather for english and french.

--- a/cliqz@cliqz.com/chrome/locale/de/cliqz.json
+++ b/cliqz@cliqz.com/chrome/locale/de/cliqz.json
@@ -50,6 +50,9 @@
     "weatherCurrent":{
         "message":"aktuell"
     },
+    "weatherDateSeparator":{
+        "message":". "
+    },
     "weatherCredits":{
         "message":"zur Verfügung gestellt von <br /> openweathermap.org"
     },
