--- a/cliqz@cliqz.com/chrome/locale/en/cliqz.json
+++ b/cliqz@cliqz.com/chrome/locale/en/cliqz.json
@@ -50,6 +50,9 @@
     "weatherCurrent":{
         "message":"current"
     },
+    "weatherDateSeparator":{
+        "message":" "
+    },
     "weatherCredits":{
         "message":"provided courtesy of <br /> openweathermap.org"
     },
