language dependent off boarding

--- a/cliqz@cliqz.com/chrome/locale/en/cliqz.json
+++ b/cliqz@cliqz.com/chrome/locale/en/cliqz.json
@@ -3,7 +3,7 @@
         "message": "What is cliqz?"
     },
     "whatIsCliqzTry":{
-        "message": "What is cliqz? <-- try it yourself, eg: 'Mario Gotze'"
+        "message": "What is cliqz? <-- try it yourself, eg: 'weather new york'"
     },
     "settings":{
         "message": "Settings"
