--- a/cliqz@cliqz.com/chrome/locale/de/cliqz.json
+++ b/cliqz@cliqz.com/chrome/locale/de/cliqz.json
@@ -17,6 +17,9 @@
     "btnRegion":{
         "message": "Regionale Ergebnisse"
     },
+    "btnShare":{
+        "message": "cliqz Share"
+    },
     "urlBarLastSearch":{
         "message":"↵  "
     },
