--- a/cliqz@cliqz.com/chrome/locale/en/cliqz.json
+++ b/cliqz@cliqz.com/chrome/locale/en/cliqz.json
@@ -20,6 +20,9 @@
     "btnShare":{
         "message": "cliqz Share"
     },
+    "btnStats":{
+        "message": "Stats"
+    },
     "urlBarLastSearch":{
         "message":"↵  "
     },
