--- a/cliqz@cliqz.com/chrome/locale/de/cliqz.json
+++ b/cliqz@cliqz.com/chrome/locale/de/cliqz.json
@@ -271,5 +271,11 @@
     },
     "country_code_VN": {
       "message":"Việt Nam - Vietnam"
+    },
+    "statsText": {
+      "message": "In den letzten <b>7 Tagen</b> hast Du <b>{} Suchen</b> gestartet.<br/><br/>Bei <b>{}</b> dieser Suchen hat <b>cliqz</b> Dich zu Deinem Ziel geführt.<br/><br/>Dabei musstest Du im Schnitt <b>unter lediglich {} Vorschlägen aussuchen,</b> statt auf langenSuchmaschinen-Ergebnisseiten unter im Schnitt {} Vorschlägen das richtige Ergebnis zu suchen.<br/><br/>Zusätzlich hat cliqz Dir damit <b>{} Werbeplatzierungen erspart</b>(eine Suchmaschine zeigt im Schnitt 7 gekaufte Links auf ihnen Suchergebnis-Seiten an).<br/><br/>Und weil Du auf einer Suchmaschinen-Ergebnisseite im Schnitt 3,5 Sekunden verbringst,hat cliqz Dir zusätzlich <b>{} Minuten Deiner wertvollen Zeit gespart.</b>"
+    },
+    "statsShareMsg": {
+      "message": "@cliqz saved me {} minutes over the last 7 days"
     }
 }
