Updated translations (included a couple missing ones). Added drop_url_fragments to get rid of '#' in urls. Added en and fr wikipedia. Added amazon.com, amazon.fr, amazon.co.uk Disabled ebay.de for now... will enable later after some fixes.

--- a/cliqz@cliqz.com/chrome/locale/en/cliqz.json
+++ b/cliqz@cliqz.com/chrome/locale/en/cliqz.json
@@ -191,6 +191,21 @@
     "Sitemap_Bild_Bundesliga": {
         "message":"Bundesliga"
     },
+    "Sitemap_Wikipedia_Articles": {
+      "message":"Articles"
+    },
+    "Sitemap_People": {
+      "message":"People"
+    },
+    "Sitemap_Search": {
+      "message":"Search"
+    },
+    "Sitemap_Projects": {
+      "message":"Projects"
+    },
+    "Sitemap_Twitter_Discover": {
+      "message":"Discover"
+    },
     "country_code_": {
       "message":"Automatic"
     },
