--- a/cliqz@cliqz.com/chrome/locale/de/cliqz.json
+++ b/cliqz@cliqz.com/chrome/locale/de/cliqz.json
@@ -117,7 +117,7 @@
         "message":"Später ansehen"
     },
     "Sitemap_Youtube_Channels": {
-        "message":"Channels"
+        "message":"Kanäle"
     },
     "Sitemap_Youtube_Playlists": {
         "message":"Playlists"
@@ -196,6 +196,21 @@
     },
     "Sitemap_Bild_Bundesliga": {
         "message":"Bundesliga"
+    },
+    "Sitemap_Wikipedia_Articles": {
+      "message":"Artikel"
+    },
+    "Sitemap_People": {
+      "message":"Leute"
+    },
+    "Sitemap_Search": {
+      "message":"Suchen"
+    },
+    "Sitemap_Projects": {
+      "message":"Projekte"
+    },
+    "Sitemap_Twitter_Discover": {
+      "message":"Entdecken"
     },
     "country_code_": {
       "message":"Automatisch"
