--- a/cliqz@cliqz.com/chrome/locale/en/cliqz.json
+++ b/cliqz@cliqz.com/chrome/locale/en/cliqz.json
@@ -277,5 +277,8 @@
     },
     "country_code_VN": {
       "message":"Việt Nam - Vietnam"
+    },
+    "spell_correction": {
+      "message":"Do you really mean: "
     }
 }
