--- a/cliqz@cliqz.com/chrome/locale/en/cliqz.json
+++ b/cliqz@cliqz.com/chrome/locale/en/cliqz.json
@@ -279,6 +279,6 @@
       "message":"Việt Nam - Vietnam"
     },
     "spell_correction": {
-      "message":"Do you really mean: "
+      "message":"Did you really mean "
     }
 }
