--- a/cliqz@cliqz.com/chrome/locale/de/cliqz.json
+++ b/cliqz@cliqz.com/chrome/locale/de/cliqz.json
@@ -285,6 +285,6 @@
       "message":"Việt Nam - Vietnam"
     },
     "spell_correction": {
-      "message":"Meinen Sie wirklich: "
+      "message":"Meintest Du wirklich "
     }
 }
