--- a/cliqz@cliqz.com/chrome/locale/en/cliqz.json
+++ b/cliqz@cliqz.com/chrome/locale/en/cliqz.json
@@ -1,9 +1,9 @@
 {
     "whatIsCliqz":{
-        "message": "What is cliqz?"
+        "message": "What is CLIQZ?"
     },
     "whatIsCliqzTry":{
-        "message": "What is cliqz? <-- try it yourself, eg: 'weather new york'"
+        "message": "What is CLIQZ? <-- try it yourself, eg: 'weather new york'"
     },
     "settings":{
         "message": "Settings"
@@ -18,7 +18,7 @@
         "message": "Local Results"
     },
     "btnShare":{
-        "message": "cliqz Share"
+        "message": "CLIQZ Share"
     },
     "urlBarLastSearch":{
         "message":"↵  "
