--- a/cliqz@cliqz.com/chrome/locale/it/cliqz.json
+++ b/cliqz@cliqz.com/chrome/locale/it/cliqz.json
@@ -1,9 +1,9 @@
 {
     "whatIsCliqz":{
-        "message": "Cos'è cliqz?"
+        "message": "Cos'è CLIQZ?"
     },
     "whatIsCliqzTry":{
-        "message": "Cos'è cliqz? <-- scoprilo digitando ad esempio: 'meteo roma'"
+        "message": "Cos'è CLIQZ? <-- scoprilo digitando ad esempio: 'meteo roma'"
     },
     "settings":{
         "message": "Impostazioni"
@@ -18,7 +18,7 @@
         "message": "Localizzazione dei risultati"
     },
     "btnShare":{
-        "message": "cliqz Share"
+        "message": "CLIQZ Share"
     },
     "urlBarLastSearch":{
         "message":"↵  "
