--- a/cliqz@cliqz.com/chrome/locale/en/cliqz.json
+++ b/cliqz@cliqz.com/chrome/locale/en/cliqz.json
@@ -11,6 +11,12 @@
     "btnPrivacy":{
         "message": "Privacy Policy"
     },
+    "btnShowCliqzNewTabEnabled":{
+        "message": "Disable Newtab"
+    },
+    "btnShowCliqzNewTabDisabled":{
+        "message": "Enable Newtab"
+    },
     "btnDefaultSearchEngine":{
         "message": "Default Search Engine"
     },
