Almost done porn filter

--- a/cliqz@cliqz.com/chrome/locale/en/cliqz.json
+++ b/cliqz@cliqz.com/chrome/locale/en/cliqz.json
@@ -295,5 +295,17 @@
     },
     "spell_correction": {
       "message":"Did you really mean "
+    },
+    "result_filter_conservative": {
+      "message":"Conservative"
+    },
+    "result_filter_moderate": {
+      "message":"Moderate"
+    },
+    "result_filter_liberal": {
+      "message":"Liberal"
+    },
+    "result_filter": {
+      "message":"Result filter"
     }
 }
