--- a/cliqz@cliqz.com/chrome/locale/de/cliqz.json
+++ b/cliqz@cliqz.com/chrome/locale/de/cliqz.json
@@ -303,6 +303,6 @@
       "message":"Meintest Du wirklich "
     },
     "history_results": {
-      "message":"Ergebnisse aus Ihrem Verlauf"
+      "message":"Besuchte Webseiten"
     }
 }
