--- a/cliqz@cliqz.com/chrome/locale/en/cliqz.json
+++ b/cliqz@cliqz.com/chrome/locale/en/cliqz.json
@@ -297,6 +297,6 @@
       "message":"Did you really mean "
     },
     "history_results": {
-      "message":"Results from your history"
+      "message":"Visited Sites"
     }
 }
