--- a/cliqz@cliqz.com/chrome/locale/hu/cliqz.json
+++ b/cliqz@cliqz.com/chrome/locale/hu/cliqz.json
@@ -1,4 +1,8 @@
 {
+    "noResultTitle":{
+        "message": {"H1": "we don't have great results this time.",
+                    "H2": "press enter to search on ..., or try one of these:."}
+    },
     "urlBarLastSearch":{
         "message":"↵  "
     },
