--- a/cliqz@cliqz.com/chrome/locale/en/cliqz.json
+++ b/cliqz@cliqz.com/chrome/locale/en/cliqz.json
@@ -30,7 +30,8 @@
         "message":"↵  "
     },
     "noResultTitle":{
-        "message":"Sorry, we don’t have any results yet.<br />We’re working on it."
+        "message": {"H1": "we don't have great results this time.",
+                    "H2": "press enter to search on ..., or try one of these:."}
     },
     "noResultMessage":{
         "message":"Hover over <b><i>more</i></b> at the bottom right and select another search engine."
