--- a/cliqz@cliqz.com/chrome/locale/fr/cliqz.json
+++ b/cliqz@cliqz.com/chrome/locale/fr/cliqz.json
@@ -30,7 +30,8 @@
         "message":"↵  "
     },
     "noResultTitle":{
-        "message":"Oops, Nous n'avons pas encore le bon résultat.<br /> Nous faisons de notre mieux pour résoudre le problème!"
+        "message": {"H1": "we don't have great results this time.",
+                    "H2": "press enter to search on ..., or try one of these:."}
     },
     "noResultMessage":{
         "message":"Survolez <b><i>plus</i></b> en bas à droite et sélectionnez un autre moteur de recherche."
