--- a/cliqz@cliqz.com/chrome/locale/it/cliqz.json
+++ b/cliqz@cliqz.com/chrome/locale/it/cliqz.json
@@ -24,7 +24,8 @@
         "message":"↵  "
     },
     "noResultTitle":{
-        "message":"Non abbiamo risultati, ci dispiace.<br />Stiamo lavorando per migliorarci."
+        "message": {"H1": "we don't have great results this time.",
+                    "H2": "press enter to search on ..., or try one of these:."}
     },
     "noResultMessage":{
         "message":"Passa il mouse <b><i>più</i></b> in basso a destra e seleziona un altro motore di ricerca."
