--- a/cliqz@cliqz.com/chrome/locale/fr/cliqz.json
+++ b/cliqz@cliqz.com/chrome/locale/fr/cliqz.json
@@ -30,11 +30,10 @@
         "message":"↵  "
     },
     "noResultTitle":{
-        "message": {"H1": "we don't have great results this time.",
-                    "H2": "press enter to search on ..., or try one of these:."}
+        "message": "we don't have great results this time."
     },
     "noResultMessage":{
-        "message":"Survolez <b><i>plus</i></b> en bas à droite et sélectionnez un autre moteur de recherche."
+        "message":"press enter to search on ..., or try one of these:."
     },
     "noResults": {
         "message":"Aucun résultat"
